# Machine-Learning-for-Biomedical-Data

./: .gitignore  README.md  pyproject.toml
class-solved/MODULE1_ML-Pipeline_HeartAttack-solved/: 10.20_S1_heart-disease-UCI-solved.html
class-solved/MODULE2_algorithms-solved/: 10-bagging_HOML.nb.html  11-random-forests_HOML.html  12-gbm_HOML.nb.html  HOML-trees.R
class/MODULE1_ML-Pipeline_HeartAttack/: 10.10_dplyr_ggplot_classnotes_4feb_2021.R  10.30_S2_heart-disease-UCI-hw.Rmd  10.50_S3_heart-disease-UCI-hw.Rmd
class/MODULE2_algorithms/: 02.20_Bagging_and_RF.R
docs/: 01.04_HOML_CHAPTER3.url  10_50_Visualization_with_ggplot2_optional.html
lectures/session_1_Module1/: 01.01_dplyr_ggplot_solved.R
lectures/session_1_Module1 - Intro to ML with R - EDA/: 01.01_dplyr_ggplot_hw.R  01.02_S1_heart-disease-UCI-hw.Rmd  01.02_S1_heart-disease-UCI-hw.html
lectures/session_2_Module1/: 02.02_Caret-simple-model_COX2-solved.Rmd
lectures/session_2_Module1 - Data preproccesing with recipes/: 02.01_S2_heart-disease-UCI-hw.html  02.02_Caret-simple-model_COX2-hw.Rmd
lectures/session_3_Module1/: 03.01b_heart-disease-UCI-SOLUTION.html
lectures/session_3_Module1 - End-to-end ML project/: 03.02_S3_Caret-simple-model_COX2.html
lectures/session_4_Module1/: 04.10_CART.pptx  04.30_build a simple tree.R
lectures/session_4_Module2/: 04.02_Decision_Trees-hw.ipynb
lectures/session_5_Module2 - Ensembl methods. RF, ADABOOST, XGBOOST/: 05.00b_07.Ensembles_RFs-FC.ipynb  05.01_Decision_Trees-RF-hw.ipynb  (+1 more)
mlbio2024/: Autoencoder_AnomaliasECG-clase.ipynb
(+23 files in other folders)
