[tool.poetry]
name = "machine-learning-for-biomedical-data"
version = "0.1.0"
description = ""
authors = ["Fernando Carazo <fernando.carazom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
tensorflow = "^2.15.0.post1"
matplotlib = "^3.8.3"
keras = "^3.0.5"
scikit-learn = "^1.4.1.post1"
pydot = "^2.0.0"
wandb = "^0.16.3"
torch = "^2.2.1"
tensorboard = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
